Bug 16317 - MIPS-netbsd does not define NO_IMPLICIT_EXTERN_C
Summary: MIPS-netbsd does not define NO_IMPLICIT_EXTERN_C
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: target (show other bugs)
Version: 3.4.1
: P1 normal
Target Milestone: ---
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on: 15834
Blocks:
  Show dependency treegraph
 
Reported: 2004-07-01 15:59 UTC by Paul Koning
Modified: 2004-12-07 07:21 UTC (History)
1 user (show)

See Also:
Host: i386-netbsd
Target: mipsel-netbsdelf
Build: i386-netbsd
Known to work:
Known to fail:
Last reconfirmed: 2004-10-07 00:29:08


Attachments
example of failing code (1.69 KB, text/plain)
2004-07-01 16:24 UTC, Paul Koning
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Paul Koning 2004-07-01 15:59:24 UTC
This code gets a compile error (error: template with C linkage) in 3.4.1 RC1:

# 1 "test.cc"
# 1 "<built-in>"
# 1 "<command line>"
# 1 "test.cc"
# 1 "/buildarea/cvs162/NetBSD162/src/sys/EQL/iscsi/iscsi_load.cc"

# 1 "/buildarea/cvs162/bin/destdir.sbmips.debug/EQL.PSS.KGDB//"
# 1 "<built-in>"
# 1 "<command line>"
# 1 "/buildarea/cvs162/NetBSD162/src/sys/EQL/iscsi/iscsi_load.cc"
# 16 "/buildarea/cvs162/NetBSD162/src/sys/EQL/iscsi/iscsi_load.cc"
# 1 "/buildarea/cvs162/NetBSD162/src/sys/EQL/iscsi/sp.h" 1
# 23 "/buildarea/cvs162/NetBSD162/src/sys/EQL/iscsi/sp.h"
# 1 "/buildarea/cvs162/NetBSD162/src/sys/sys/param.h" 1
# 86 "/buildarea/cvs162/NetBSD162/src/sys/sys/param.h"
# 1 "/buildarea/cvs162/NetBSD162/src/sys/sys/null.h" 1
# 87 "/buildarea/cvs162/NetBSD162/src/sys/sys/param.h" 2
# 1 "/buildarea/cvs162/NetBSD162/src/sys/sys/inttypes.h" 1
# 46 "/buildarea/cvs162/NetBSD162/src/sys/sys/inttypes.h"
# 1 "/buildarea/cvs162/NetBSD162/src/sys/sys/stdint.h" 1
# 42 "/buildarea/cvs162/NetBSD162/src/sys/sys/stdint.h"
# 1 "./machine/int_types.h" 1
# 1 "./mips/int_types.h" 1
# 50 "./mips/int_types.h"
# 4 "./machine/int_types.h" 2
# 43 "/buildarea/cvs162/NetBSD162/src/sys/sys/stdint.h" 2
# 1 "./machine/int_mwgwtypes.h" 1
# 1 "./mips/int_mwgwtypes.h" 1
# 48 "./mips/int_mwgwtypes.h"
# 4 "./machine/int_mwgwtypes.h" 2
# 95 "/buildarea/cvs162/NetBSD162/src/sys/sys/stdint.h" 2
# 47 "/buildarea/cvs162/NetBSD162/src/sys/sys/inttypes.h" 2
# 90 "/buildarea/cvs162/NetBSD162/src/sys/sys/param.h" 2
# 1 "/buildarea/cvs162/NetBSD162/src/sys/sys/types.h" 1
# 47 "/buildarea/cvs162/NetBSD162/src/sys/sys/types.h"
# 1 "./machine/types.h" 1
# 1 "./mips/types.h" 1
# 44 "./mips/types.h"
# 1 "/buildarea/cvs162/NetBSD162/src/sys/sys/cdefs.h" 1
# 63 "/buildarea/cvs162/NetBSD162/src/sys/sys/cdefs.h"
# 1 "./machine/cdefs.h" 1
# 1 "./mips/cdefs.h" 1
# 4 "./machine/cdefs.h" 2
# 64 "/buildarea/cvs162/NetBSD162/src/sys/sys/cdefs.h" 2
# 1 "/buildarea/cvs162/NetBSD162/src/sys/sys/cdefs_elf.h" 1
# 66 "/buildarea/cvs162/NetBSD162/src/sys/sys/cdefs.h" 2
# 45 "./mips/types.h" 2
# 4 "./machine/types.h" 2
# 48 "/buildarea/cvs162/NetBSD162/src/sys/sys/types.h" 2
# 1 "./machine/ansi.h" 1
# 1 "./mips/ansi.h" 1
# 41 "./mips/ansi.h"
# 1 "./machine/int_types.h" 1
# 42 "./mips/ansi.h" 2
# 88 "./mips/ansi.h"
# 4 "./machine/ansi.h" 2
# 50 "/buildarea/cvs162/NetBSD162/src/sys/sys/types.h" 2
# 1 "./machine/int_types.h" 1
# 51 "/buildarea/cvs162/NetBSD162/src/sys/sys/types.h" 2
# 1 "/buildarea/cvs162/NetBSD162/src/sys/sys/ansi.h" 1
# 42 "/buildarea/cvs162/NetBSD162/src/sys/sys/ansi.h"
# 1 "./machine/int_types.h" 1
# 43 "/buildarea/cvs162/NetBSD162/src/sys/sys/ansi.h" 2
# 54 "/buildarea/cvs162/NetBSD162/src/sys/sys/types.h" 2
# 95 "/buildarea/cvs162/NetBSD162/src/sys/sys/types.h"
# 1 "./machine/endian.h" 1
# 1 "/buildarea/cvs162/NetBSD162/src/sys/sys/endian.h" 1
# 49 "/buildarea/cvs162/NetBSD162/src/sys/sys/endian.h"
# 1 "./machine/endian_machdep.h" 1
# 11 "./machine/endian_machdep.h"
# 1 "./mips/endian_machdep.h" 1
# 12 "./machine/endian_machdep.h" 2
# 50 "/buildarea/cvs162/NetBSD162/src/sys/sys/endian.h" 2
# 81 "/buildarea/cvs162/NetBSD162/src/sys/sys/endian.h"
# 1 "/buildarea/cvs162/NetBSD162/src/sys/sys/types.h" 1
# 82 "/buildarea/cvs162/NetBSD162/src/sys/sys/endian.h" 2
# 1 "./machine/bswap.h" 1
# 1 "./mips/bswap.h" 1
# 1 "/buildarea/cvs162/NetBSD162/src/sys/sys/bswap.h" 1
# 16 "/buildarea/cvs162/NetBSD162/src/sys/sys/bswap.h"
# 8 "./mips/bswap.h" 2
# 4 "./machine/bswap.h" 2
# 127 "/buildarea/cvs162/NetBSD162/src/sys/sys/endian.h" 2
# 4 "./machine/endian.h" 2
# 101 "/buildarea/cvs162/NetBSD162/src/sys/sys/types.h" 2
# 91 "/buildarea/cvs162/NetBSD162/src/sys/sys/param.h" 2
# 100 "/buildarea/cvs162/NetBSD162/src/sys/sys/param.h"
# 1 "/buildarea/cvs162/NetBSD162/src/sys/sys/syslimits.h" 1
# 41 "/buildarea/cvs162/NetBSD162/src/sys/sys/syslimits.h"
# 1 "/buildarea/cvs162/NetBSD162/src/sys/sys/featuretest.h" 1
# 42 "/buildarea/cvs162/NetBSD162/src/sys/sys/syslimits.h" 2
# 101 "/buildarea/cvs162/NetBSD162/src/sys/sys/param.h" 2
# 125 "/buildarea/cvs162/NetBSD162/src/sys/sys/param.h"
# 1 "/buildarea/cvs162/NetBSD162/src/sys/sys/errno.h" 1
# 126 "/buildarea/cvs162/NetBSD162/src/sys/sys/param.h" 2
# 1 "/buildarea/cvs162/NetBSD162/src/sys/sys/time.h" 1
# 128 "/buildarea/cvs162/NetBSD162/src/sys/sys/param.h" 2
# 1 "/buildarea/cvs162/NetBSD162/src/sys/sys/ucred.h" 1
# 129 "/buildarea/cvs162/NetBSD162/src/sys/sys/param.h" 2
# 1 "/buildarea/cvs162/NetBSD162/src/sys/sys/uio.h" 1
# 41 "/buildarea/cvs162/NetBSD162/src/sys/sys/uio.h"
# 1 "./machine/ansi.h" 1
# 42 "/buildarea/cvs162/NetBSD162/src/sys/sys/uio.h" 2
# 1 "/buildarea/cvs162/NetBSD162/src/sys/sys/featuretest.h" 1
# 43 "/buildarea/cvs162/NetBSD162/src/sys/sys/uio.h" 2
# 130 "/buildarea/cvs162/NetBSD162/src/sys/sys/param.h" 2
# 143 "/buildarea/cvs162/NetBSD162/src/sys/sys/param.h"
# 1 "/buildarea/cvs162/NetBSD162/src/sys/sys/signal.h" 1
# 46 "/buildarea/cvs162/NetBSD162/src/sys/sys/signal.h"
# 1 "/buildarea/cvs162/NetBSD162/src/sys/sys/featuretest.h" 1
# 47 "/buildarea/cvs162/NetBSD162/src/sys/sys/signal.h" 2
# 1 "./machine/signal.h" 1
# 1 "./mips/signal.h" 1
# 44 "./mips/signal.h"
# 1 "./machine/cdefs.h" 1
# 45 "./mips/signal.h" 2
# 4 "./machine/signal.h" 2
# 291 "/buildarea/cvs162/NetBSD162/src/sys/sys/signal.h" 2
# 308 "/buildarea/cvs162/NetBSD162/src/sys/sys/signal.h"
# 144 "/buildarea/cvs162/NetBSD162/src/sys/sys/param.h" 2
# 1 "./machine/param.h" 1
# 48 "./machine/param.h"
# 1 "./mips/mips_param.h" 1
# 1 "./machine/cpu.h" 1
# 1 "./mips/cpu.h" 1
# 44 "./mips/cpu.h"
# 1 "./mips/cpuregs.h" 1
# 89 "./mips/cpuregs.h"
# 1 "./machine/cpuregs_machdep.h" 1
# 1 "/buildarea/cvs162/NetBSD162/src/sys/sys/systm.h" 1
# 1 "/buildarea/cvs162/NetBSD162/src/sys/lib/libkern/libkern.h" 1
# 342 "/buildarea/cvs162/NetBSD162/src/sys/sys/systm.h" 2
# 9 "./machine/cpuregs_machdep.h" 2
# 90 "./mips/cpuregs.h" 2
# 45 "./mips/cpu.h" 2
# 1 "/buildarea/cvs162/NetBSD162/src/sys/sys/sched.h" 1
# 83 "/buildarea/cvs162/NetBSD162/src/sys/sys/sched.h"
# 1 "./opt_multiprocessor.h" 1
# 84 "/buildarea/cvs162/NetBSD162/src/sys/sys/sched.h" 2
# 1 "./opt_lockdebug.h" 1
# 85 "/buildarea/cvs162/NetBSD162/src/sys/sys/sched.h" 2
# 52 "./mips/cpu.h" 2
# 1 "./opt_lockdebug.h" 1
# 55 "./mips/cpu.h" 2
# 325 "./mips/cpu.h"
# 4 "./machine/cpu.h" 2
# 5 "./mips/mips_param.h" 2
# 49 "./machine/param.h" 2
# 110 "./machine/param.h"
# 1 "./machine/systemsw.h" 1
# 41 "./machine/systemsw.h"
# 111 "./machine/param.h" 2
# 1 "./machine/intr.h" 1
# 39 "./machine/intr.h"
# 112 "./machine/param.h" 2
# 147 "/buildarea/cvs162/NetBSD162/src/sys/sys/param.h" 2
# 1 "./machine/limits.h" 1
# 1 "./mips/limits.h" 1
# 4 "./machine/limits.h" 2
# 148 "/buildarea/cvs162/NetBSD162/src/sys/sys/param.h" 2
# 24 "/buildarea/cvs162/NetBSD162/src/sys/EQL/iscsi/sp.h" 2
# 1 "/buildarea/cvs162/NetBSD162/src/sys/sys/device.h" 1
# 84 "/buildarea/cvs162/NetBSD162/src/sys/sys/device.h"
# 1 "/buildarea/cvs162/NetBSD162/src/sys/sys/queue.h" 1
# 85 "/buildarea/cvs162/NetBSD162/src/sys/sys/device.h" 2
# 25 "/buildarea/cvs162/NetBSD162/src/sys/EQL/iscsi/sp.h" 2
# 1 "/buildarea/cvs162/NetBSD162/src/sys/sys/kernel.h" 1
# 48 "/buildarea/cvs162/NetBSD162/src/sys/sys/kernel.h"
# 82 "/buildarea/cvs162/NetBSD162/src/sys/sys/kernel.h"
# 27 "/buildarea/cvs162/NetBSD162/src/sys/EQL/iscsi/sp.h" 2
# 1 "/buildarea/cvs162/NetBSD162/src/sys/sys/fcntl.h" 1
# 233 "/buildarea/cvs162/NetBSD162/src/sys/sys/fcntl.h"
# 28 "/buildarea/cvs162/NetBSD162/src/sys/EQL/iscsi/sp.h" 2
# 1 "/buildarea/cvs162/NetBSD162/src/sys/sys/malloc.h" 1
# 42 "/buildarea/cvs162/NetBSD162/src/sys/sys/malloc.h"
# 1 "./opt_kmemstats.h" 1
# 43 "/buildarea/cvs162/NetBSD162/src/sys/sys/malloc.h" 2
# 1 "./opt_malloclog.h" 1
# 44 "/buildarea/cvs162/NetBSD162/src/sys/sys/malloc.h" 2
# 1 "./opt_malloc_debug.h" 1
# 45 "/buildarea/cvs162/NetBSD162/src/sys/sys/malloc.h" 2
# 1 "./opt_lockdebug.h" 1
# 46 "/buildarea/cvs162/NetBSD162/src/sys/sys/malloc.h" 2
# 335 "/buildarea/cvs162/NetBSD162/src/sys/sys/malloc.h"
# 29 "/buildarea/cvs162/NetBSD162/src/sys/EQL/iscsi/sp.h" 2
# 1 "/buildarea/cvs162/NetBSD162/src/sys/sys/mbuf.h" 1
# 82 "/buildarea/cvs162/NetBSD162/src/sys/sys/mbuf.h"
# 1 "/buildarea/cvs162/NetBSD162/src/sys/sys/pool.h" 1
# 48 "/buildarea/cvs162/NetBSD162/src/sys/sys/pool.h"
# 1 "./opt_pool.h" 1
# 49 "/buildarea/cvs162/NetBSD162/src/sys/sys/pool.h" 2
# 1 "/buildarea/cvs162/NetBSD162/src/sys/sys/lock.h" 1
# 86 "/buildarea/cvs162/NetBSD162/src/sys/sys/lock.h"
# 1 "./opt_lockdebug.h" 1
# 87 "/buildarea/cvs162/NetBSD162/src/sys/sys/lock.h" 2
# 1 "./opt_multiprocessor.h" 1
# 88 "/buildarea/cvs162/NetBSD162/src/sys/sys/lock.h" 2
# 1 "./machine/lock.h" 1
# 1 "./mips/lock.h" 1
# 46 "./mips/lock.h"
# 5 "./machine/lock.h" 2
# 92 "/buildarea/cvs162/NetBSD162/src/sys/sys/lock.h" 2
# 53 "/buildarea/cvs162/NetBSD162/src/sys/sys/pool.h" 2
# 62 "/buildarea/cvs162/NetBSD162/src/sys/sys/pool.h"
# 83 "/buildarea/cvs162/NetBSD162/src/sys/sys/mbuf.h" 2
# 105 "/buildarea/cvs162/NetBSD162/src/sys/sys/mbuf.h"
# 30 "/buildarea/cvs162/NetBSD162/src/sys/EQL/iscsi/sp.h" 2
# 1 "/buildarea/cvs162/NetBSD162/src/sys/sys/proc.h" 1
# 47 "/buildarea/cvs162/NetBSD162/src/sys/sys/proc.h"
# 1 "./opt_multiprocessor.h" 1
# 48 "/buildarea/cvs162/NetBSD162/src/sys/sys/proc.h" 2
# 1 "./machine/cpu.h" 1
# 52 "/buildarea/cvs162/NetBSD162/src/sys/sys/proc.h" 2
# 1 "./machine/proc.h" 1
# 1 "./mips/proc.h" 1
# 44 "./mips/proc.h"
# 4 "./machine/proc.h" 2
# 54 "/buildarea/cvs162/NetBSD162/src/sys/sys/proc.h" 2
# 1 "/buildarea/cvs162/NetBSD162/src/sys/sys/callout.h" 1
# 84 "/buildarea/cvs162/NetBSD162/src/sys/sys/callout.h"
# 57 "/buildarea/cvs162/NetBSD162/src/sys/sys/proc.h" 2
# 1 "/buildarea/cvs162/NetBSD162/src/sys/sys/signalvar.h" 1
# 49 "/buildarea/cvs162/NetBSD162/src/sys/sys/signalvar.h"
# 58 "/buildarea/cvs162/NetBSD162/src/sys/sys/proc.h" 2
# 368 "/buildarea/cvs162/NetBSD162/src/sys/sys/proc.h"
# 31 "/buildarea/cvs162/NetBSD162/src/sys/EQL/iscsi/sp.h" 2
# 1 "./machine/locore.h" 1
# 1 "./mips/locore.h" 1
# 28 "./mips/locore.h"
# 1 "./opt_cputype.h" 1
# 29 "./mips/locore.h" 2
# 1 "./opt_mips_cache.h" 1
# 30 "./mips/locore.h" 2
# 193 "./mips/locore.h"
# 307 "./mips/locore.h"
# 4 "./machine/locore.h" 2
# 32 "/buildarea/cvs162/NetBSD162/src/sys/EQL/iscsi/sp.h" 2
# 1 "/buildarea/cvs162/NetBSD162/src/sys/EQL/diag/io_history_enable.h" 1
# 30 "/buildarea/cvs162/NetBSD162/src/sys/EQL/diag/io_history_enable.h"
# 37 "/buildarea/cvs162/NetBSD162/src/sys/EQL/iscsi/sp.h" 2
# 1 "/buildarea/cvs162/bin/destdir.sbmips.debug/usr/include/EQL/eqllog/iscsi.h"
1 3 4
# 14 "/buildarea/cvs162/bin/destdir.sbmips.debug/usr/include/EQL/eqllog/iscsi.h" 3 4
# 41 "/buildarea/cvs162/NetBSD162/src/sys/EQL/iscsi/sp.h" 2
# 1 "/buildarea/cvs162/bin/destdir.sbmips.debug/usr/include/EQL/eqllog/common.h"
1 3 4
# 14
"/buildarea/cvs162/bin/destdir.sbmips.debug/usr/include/EQL/eqllog/common.h" 3 4
# 42 "/buildarea/cvs162/NetBSD162/src/sys/EQL/iscsi/sp.h" 2
# 1 "/buildarea/cvs162/bin/destdir.sbmips.debug/usr/include/EQL/c++redefs.h" 1 3 4
# 44 "/buildarea/cvs162/NetBSD162/src/sys/EQL/iscsi/sp.h" 2
# 1 "/buildarea/cvs162/bin/destdir.sbmips.debug/usr/include/EQL/eq_types.h" 1 3 4
# 68 "/buildarea/cvs162/bin/destdir.sbmips.debug/usr/include/EQL/eq_types.h" 3 4
# 81 "/buildarea/cvs162/bin/destdir.sbmips.debug/usr/include/EQL/eq_types.h" 3 4
# 1 "./machine/stdarg.h" 1 3 4
# 1 "./mips/stdarg.h" 1 3 4
# 41 "./mips/stdarg.h" 3 4
# 1 "./machine/ansi.h" 1 3 4
# 42 "./mips/stdarg.h" 2 3 4
# 1 "/buildarea/cvs162/NetBSD162/src/sys/sys/featuretest.h" 1 3 4
# 43 "./mips/stdarg.h" 2 3 4
# 4 "./machine/stdarg.h" 2 3 4
# 101 "/buildarea/cvs162/bin/destdir.sbmips.debug/usr/include/EQL/eq_types.h" 2 3 4
# 46 "/buildarea/cvs162/NetBSD162/src/sys/EQL/iscsi/sp.h" 2
# 1 "/buildarea/cvs162/bin/destdir.sbmips.debug/usr/include/EQL/eq_math.h" 1 3 4
# 47 "/buildarea/cvs162/NetBSD162/src/sys/EQL/iscsi/sp.h" 2
# 1 "/buildarea/cvs162/bin/destdir.sbmips.debug/usr/include/EQL/eqllog.h" 1 3 4
# 22 "/buildarea/cvs162/bin/destdir.sbmips.debug/usr/include/EQL/eqllog.h" 3 4
# 48 "/buildarea/cvs162/NetBSD162/src/sys/EQL/iscsi/sp.h" 2
# 1 "/buildarea/cvs162/bin/destdir.sbmips.debug/usr/include/EQL/ipc.h" 1 3 4
# 20 "/buildarea/cvs162/bin/destdir.sbmips.debug/usr/include/EQL/ipc.h" 3 4
# 49 "/buildarea/cvs162/NetBSD162/src/sys/EQL/iscsi/sp.h" 2
# 1 "/buildarea/cvs162/bin/destdir.sbmips.debug/usr/include/EQL/eql_callout.h" 1 3 4
# 21 "/buildarea/cvs162/bin/destdir.sbmips.debug/usr/include/EQL/eql_callout.h" 3 4
# 51 "/buildarea/cvs162/NetBSD162/src/sys/EQL/iscsi/sp.h" 2
# 1 "./machine/eql_counters.h" 1
# 35 "./machine/eql_counters.h"
# 56 "/buildarea/cvs162/NetBSD162/src/sys/EQL/iscsi/sp.h" 2
# 1 "/buildarea/cvs162/bin/destdir.sbmips.debug/usr/include/EQL/iring.h" 1 3 4
# 25 "/buildarea/cvs162/bin/destdir.sbmips.debug/usr/include/EQL/iring.h" 3 4
# 39 "/buildarea/cvs162/bin/destdir.sbmips.debug/usr/include/EQL/iring.h" 3 4
# 1 "./machine/iring.h" 1 3 4
# 25 "./machine/iring.h" 3 4
# 57 "/buildarea/cvs162/bin/destdir.sbmips.debug/usr/include/EQL/iring.h" 2 3 4
# 57 "/buildarea/cvs162/NetBSD162/src/sys/EQL/iscsi/sp.h" 2
# 1 "/buildarea/cvs162/NetBSD162/src/sys/EQL/shim/pss_io_stack.h" 1
# 31 "/buildarea/cvs162/NetBSD162/src/sys/EQL/shim/pss_io_stack.h"
# 58 "/buildarea/cvs162/NetBSD162/src/sys/EQL/iscsi/sp.h" 2
# 1
"/buildarea/cvs162/bin/destdir.sbmips.debug/usr/include/EQL/ioman/iom_psv_defs.hh"
1 3 4
# 24
"/buildarea/cvs162/bin/destdir.sbmips.debug/usr/include/EQL/ioman/iom_psv_defs.hh"
3 4
# 64
"/buildarea/cvs162/bin/destdir.sbmips.debug/usr/include/EQL/ioman/iom_psv_defs.hh"
3 4
# 272
"/buildarea/cvs162/bin/destdir.sbmips.debug/usr/include/EQL/ioman/iom_psv_defs.hh"
3 4
# 61 "/buildarea/cvs162/NetBSD162/src/sys/EQL/iscsi/sp.h" 2
# 1
"/buildarea/cvs162/bin/destdir.sbmips.debug/usr/include/EQL/iscsi/FreeList.h" 1 3 4
# 20
"/buildarea/cvs162/bin/destdir.sbmips.debug/usr/include/EQL/iscsi/FreeList.h" 3 4
# 1
"/buildarea/cvs162/bin/destdir.sbmips.debug/usr/include/EQL/iscsi/iSCSIAssert.h"
1 3 4
# 21
"/buildarea/cvs162/bin/destdir.sbmips.debug/usr/include/EQL/iscsi/FreeList.h" 2 3 4
# 1
"/buildarea/cvs162/bin/destdir.sbmips.debug/usr/include/EQL/iscsi/currentTime.h"
1 3 4
# 24
"/buildarea/cvs162/bin/destdir.sbmips.debug/usr/include/EQL/iscsi/currentTime.h" 3 4
# 26
"/buildarea/cvs162/bin/destdir.sbmips.debug/usr/include/EQL/iscsi/FreeList.h" 2 3 4

template <class Type> class CFreeList
{
public:
 CFreeList(void);
 ~CFreeList(void);
 static Type * m_head;
};

If you remove, or just comment out, the # xxx line markers, it compiles without
error.  It also compiles correctly with GCC 3.4.0.
Comment 1 Wolfgang Bangerth 2004-07-01 16:22:02 UTC
Some of the lines are wrapped around. Would you mind attaching your testcase 
to this PR as a file? 
 
Thanks 
  Wolfgang 
Comment 2 Paul Koning 2004-07-01 16:24:47 UTC
Created attachment 6669 [details]
example of failing code
Comment 3 Joe Buck 2004-07-01 16:39:32 UTC
I don't see this symptom on i686-unknown-linux-gnu, either with Mark's 3.4.1 RC1
tarball or with last night's build from the 3.4 branch.  I wouldn't expect this
to be platform-specific.
Comment 4 Andrew Pinski 2004-07-01 18:18:52 UTC
The problem is that the target does not define:
/* Don't assume anything about the header files.  */
#define NO_IMPLICIT_EXTERN_C


And this is not a regression at all.
Comment 5 Paul Koning 2004-07-01 18:27:18 UTC
I confirm that.

It looked like  regression because we have been making a small number of patches
to the release sources when we build our toolset.  Adding the missing
NO_IMPLICIT_EXTERN_C is one of those.

I had missed that in my latest toolset build, which is why it looked like a
regression.

So instead it should be viewed as a bug specific to NetBSD hosts.  I saw the
same problem when building a regular native i386-netbsdelf compiler straight
from the 3.4.1 RC1 tarball.
Comment 6 Richard Sandiford 2004-07-03 11:08:13 UTC
I think we should treat gcc's output as correct.  Could you try
the binutils patch posted here:

http://sources.redhat.com/ml/binutils/2004-07/msg00038.html

...which also gives the rationale for patching binutils rather
than gcc.

Thanks,
Richard
Comment 7 Richard Sandiford 2004-07-03 11:11:26 UTC
Ooops!  Please disregard the last comment.  It was posted to the wrong bug.

("I _will_ remember to click "Back to bug" after making a change...")
Comment 8 Andrew Pinski 2004-07-08 05:21:35 UTC
the PR for getting rid of NO_IMPLICIT_EXTERN_C and making that the default is PR 15834.
Comment 9 Eric Christopher 2004-12-07 07:21:31 UTC
http://gcc.gnu.org/ml/gcc-patches/2004-12/msg00438.html
Comment 10 GCC Commits 2004-12-07 22:47:50 UTC
Subject: Bug 16317

CVSROOT:	/cvs/gcc
Module name:	gcc
Changes by:	echristo@gcc.gnu.org	2004-12-07 22:47:42

Modified files:
	gcc            : ChangeLog 
	gcc/config     : netbsd.h 

Log message:
	2004-12-07  Eric Christopher  <echristo@redhat.com>
	
	PR target/16317
	* config/netbsd.h (NO_IMPLICIT_EXTERN_C): Define.

Patches:
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/ChangeLog.diff?cvsroot=gcc&r1=2.6735&r2=2.6736
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/config/netbsd.h.diff?cvsroot=gcc&r1=1.30&r2=1.31