2004-12-07  Eric Christopher  <echristo@redhat.com>

PR target/16317
	* config/netbsd.h (NO_IMPLICIT_EXTERN_C): Define.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@91831 138bc75d-0d04-0410-961f-82ee72b054a4